# vopecsPrinter

./: .gitignore  DOCUMENTATION.md  PLAN.md  README.md  index.html  package-lock.json  package.json  version.json  vite.config.js
.github/workflows/: release.yml
.keys/: vopecs.key  vopecs.key.pub
server/: README.md  update.json  update.php
src/: main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  commands.rs  config.rs  escpos.rs  lib.rs  main.rs  printer.rs
