[package]
name = "vopecs-printer"
version = "1.0.1"
description = "VopecsPOS Thermal Printer Manager"
authors = ["Vopecs"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "vopecs_printer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-fs = "2.0"
tauri-plugin-autostart = "2.0"
tauri-plugin-notification = "2.0"
tauri-plugin-opener = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-updater = "2.0"
tauri-plugin-process = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "native-tls"] }
image = "0.25"
base64 = "0.22"
dirs = "5.0"
anyhow = "1.0"
chrono = "0.4"
thiserror = "1.0"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
